--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,9 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# env files - keeping .env.local in gitignore for security
+.env.local
+.env*.local
 
 # vercel
 .vercel
